--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="introducao-cartao">
             <h3>O verdinho mais <br>usado do Brasil!</h3>
-            <img src="./psd/cartao.png">
+            <img src="./img/cartao.png">
         </div>
         <div class="beneficios-cartao">
             <h3>E os benefícios não param por ai.</h3>
