erro de pt solcuionado

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img src="./img/mllogo.png">
             <img src="./img/itaulogo.png">
         </div>
-        <p>E diversos outros também já utilizam de todos os nosos benefícios</p>
+        <p>E diversos outros também já utilizam de todos os nossos benefícios</p>
 
     </section>
 
