--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <ul class="header-menu">
                 <li><a href="#beneficios">Beneficios</a></li>
                 <li><a href="#clientes">Clientes</a></li>
-                <li><a href="contrate">Contrate</a></li>
-                <li><a href="ajuda">Ajuda</a></li>
+                <li><a href="#contrate">Contrate</a></li>
+                <li><a href="#ajuda">Ajuda</a></li>
             </ul>
         </nav>
     </header>
@@ -71,6 +71,32 @@
         </div>
         <p>E diversos outros também já utilizam de todos os nossos benefícios</p>
 
+    </section>
+
+    <section class="contrate" id="contrate">
+            <h2 class="contrate-subtitulo">contrate</h2>
+            <form class="contrate-form">
+                <h3>A liberdade do saldo dos seus funcionários começa aqui.</h3>
+                <p>Saiba mais do nosos cartão</p>
+                <label>Nome Completo: * </label>
+                    <input type="text">
+                <label>Email corporativo: *</label>
+                    <input type="email">
+                <label>Cargo: * </label>
+                    <input type="text">
+                <label>Telefone: *</label>
+                    <input type="tel">
+                <label>Empresa: *</label>
+                    <input type="text">
+                <label>Porte: *</label>
+                    <select name="porte">
+                        <option>Micro</option>
+                        <option>Pequeno</option>
+                        <option>Medio</option>
+                        <option>Grande</option>                      
+                    </select>
+                <button>ENVIAR</button>
+            </form>
     </section>
 
 </body>
